<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/LoginBackgroud"
              android:orientation="vertical">
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@mipmap/background"
            android:gravity="center">
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:paddingTop="20dp"
                android:background="#99404348"
                android:gravity="center">
            
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"/>
        </LinearLayout>
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:background="#99000000">
            
            <EditText
                    android:id="@+id/Login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:textColor="#9F9FA0"
                    android:textColorHint="#9F9FA0"
                    android:hint="@string/Login_account_hind"/>
            
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="#83738F"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"></View>
            
            <EditText
                    android:id="@+id/Login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:hint="@string/Login_password_hind"
                    android:textColor="#9F9FA0"
                    android:textColorHint="#9F9FA0"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>
        
        </LinearLayout>
        
        
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                >
            
            
            <RadioGroup android:id="@+id/radioGroup"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                
                <RadioButton
                        android:id="@+id/student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="学生"
                        android:textSize="18dp"
                        android:textColor="@color/colorAccent"/>
                
                <RadioButton
                        android:id="@+id/teacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="管理员"
                        android:textSize="18dp"
                        android:textColor="@color/colorAccent"/>
            
            </RadioGroup>
        
        
        </RelativeLayout>
        
        <Button
                android:id="@+id/Login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="登录"
                android:textSize="20dp"
                android:background="@color/colorPrimary"/>
        
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            
            <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:text="注册"
                    android:layout_marginTop="100dp"
                    android:textSize="18dp"
                    android:onClick="register"
                    />
        </LinearLayout>
    
    </LinearLayout>

</LinearLayout>